# archive-goblin

./: .gitignore  README.md  pyproject.toml  requirements-build.txt  requirements.txt
archive_goblin/: __init__.py  __main__.py  main.py
archive_goblin/models/: file_item.py  project_metadata.py  rule.py  session.py
archive_goblin/services/: archive_connection.py  archive_language_data.py  archive_metadata.py  archive_upload.py  matcher.py  mount_detector.py  naming.py  renamer.py  scanner.py  upload_preview.py  validator.py
archive_goblin/storage/: project_store.py  settings_store.py
archive_goblin/ui/: main_window.py
archive_goblin/ui/pages/: __init__.py  archive_settings_page.py  files_page.py  metadata_page.py  metadata_settings_page.py  settings_page.py  upload_preview_page.py  upload_progress_page.py
archive_goblin/ui/widgets/: __init__.py  file_table.py  image_preview.py
archive_goblin/ui/workers/: upload_worker.py
packaging/: archive-goblin.desktop
scripts/: build-deb.sh  build-linux-app.sh
tests/: test_archive_connection.py  test_archive_metadata.py  test_archive_upload.py  test_matcher.py  test_mount_detector.py  test_project_store.py  test_renamer.py  test_scanner.py  test_settings_store.py  test_upload_preview.py  test_validator.py
