[project]
name = "archive-goblin"
version = "0.1.0"
description = "Local desktop preparation tool for Archive.org uploads"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
]

[project.scripts]
archive-goblin = "archive_goblin.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["archive_goblin*"]
